updated blog cards to remove hover effects on mobile devices, updated blog card layout on smallest mobile devices to ensure content fits

--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -6,7 +6,8 @@
 }
 blockquote {
   border-left: 5px solid $primaryColor;
-  padding: 2rem;
+  padding: 0 2rem;
+  margin: 2rem 0;
   p {
     margin-bottom: 0;
   }
