--- a/assets/scss/pages/_contact.scss
+++ b/assets/scss/pages/_contact.scss
@@ -8,19 +8,21 @@
   &__contact-list {
     padding: 0;
   }
-  &__contact-list-item {
-    background: $white;
-    padding: 4rem 2rem;
-    margin: 2rem;
+  &__contact-link {
+    display: flex;
     flex: 1;
+    text-decoration: none;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    background: $white;
+    margin: 2rem;
+  }
+  &__contact-list-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 4rem 2rem;
     list-style-type: none;
-    a {
-      display: flex;
-      flex-direction: column;
-      text-decoration: none;
-      font-size: 2rem;
-      line-height: 2.5rem;
-    }
   }
   &__icon {
     max-width: 50px;
