--- a/assets/scss/utilities/_breadcrumbs.scss
+++ b/assets/scss/utilities/_breadcrumbs.scss
@@ -8,7 +8,7 @@
     &:after {
       font-family: monospace;
       position: absolute;
-      top: 2px;
+      top: 0;
       left: -4px;
       content: ">";
       font-size: 1.8rem;
